--- a/rebar.config
+++ b/rebar.config
@@ -16,3 +16,19 @@
     {"(linux|darwin|solaris)", clean, "make -C c_src clean"},
     {"(freebsd)", clean, "gmake -C c_src clean"}
 ]}.
+
+{project_plugins, [rebar3_hex, rebar3_ex_doc]}.
+
+{ex_doc, [
+    {source_url, "https://github.com/Pevensie/jargon"},
+    {extras, ["README.md", "LICENSE"]},
+    {main, "README.md"}
+]}.
+
+{hex, [
+    {repos, [
+        #{name => <<"hexpm:pevensie">>}
+    ]},
+    {doc, ex_doc}
+]}.
+
