--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
 %% presence is necessary for a build to be considered successful
 {artifacts, ["priv/libargon2.so.1"]}.
 
-{erl_opts, [debug_info]}.
+{erl_opts, [debug_info, {i, ["argon2"]}]}.
 {deps, []}.
 
 %% Running shell commands before or after a given rebar3 command
@@ -26,9 +26,6 @@
 ]}.
 
 {hex, [
-    {repos, [
-        #{name => <<"hexpm:pevensie">>}
-    ]},
     {doc, ex_doc}
 ]}.
 
